css/styles.css
/*Auch in JS ändern!*/
:root {
  --bg-body: hsl(0 0 100);
  --bg-elevated: hsl(0 0 95);
  --bg-highlight: hsl(0 0 90);
  --bg-navbar: rgba(248, 248, 255, 0.75);
  --bg-navbar-solid: rgb(248, 248, 255);
  --text: hsl(0 0 0);
  --text-muted: hsl(0 0 1);
  --link-color: #22d;
  --link-hover: #00a;
  --missing-link: #d11;
  --missing-link-hover: #a00;
  --shadow-color: rgba(0, 0, 0, 0.2);
}

@media screen and (prefers-color-scheme: dark) {
  :root {
    --bg-body: hsl(0 0 0);
    --bg-elevated: hsl(0 0 12);
    --bg-highlight: hsl(0 0 20);
    --bg-navbar: rgba(50, 50, 50, 0.75);
    --bg-navbar-solid: rgb(50, 50, 50);
    --text: hsl(0 0 100);
    --text-muted: hsl(0 0 95);
    --link-color: #55f;
    --link-hover: #77f;
    --missing-link: #e00;
    --missing-link-hover: #f11;
    --shadow-color: rgba(0, 0, 0, 0.2);
  }

  .darkmode-invert {
    filter: invert(1);
  }

  /*Auch in JS wechseln!*/
}


html {
  font-size: 16px;
  font-weight: 450;
}


body {
  font-family: Inter, Helvetica, Arial, sans-serif;
  margin: auto;
  padding: 0;
  word-wrap: break-word;
  background-color: var(--bg-body);
  color: var(--text);
  max-width: 1500px;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
    display: grid;
  grid-template-rows: auto 1fr auto;
  min-height: 100vh;
}

h1 {
  font-size: 4rem;
  line-height: 0.9;
  margin: 1.5rem 0;
}

h2 {
  font-size: 2rem;
}

h3 {
  font-size: 1.5rem;
}

#introduction {
  font-weight: 600;
  font-size: 1.2rem;
  margin-bottom: 2rem;
}

main {
  margin: 64px;
  flex: 1;
}

sub,
sup {
  line-height: 0;
}

@media screen and (max-width: 850px) {
  main {
    margin: 64px 32px 32px 32px;
  }
}

@media screen and (max-width: 500px) {
  main {
    margin: 64px 16px 16px;
  }
}

noscript {
  color: orange;
  font-size: 0.75rem;
}

a {
  color: var(--link-color);
  text-decoration: none;
}

a:hover {
  color: var(--link-hover);
  text-decoration: underline;
}

a[href=""] {
  color: var(--missing-link);
}

a[href=""]:hover {
  color: var(--missing-link-hover);
}

.on-hover-bg-highlight:hover {
  background: var(--bg-highlight);
}

.loading-wheel {
  animation: 1s linear infinite rotate;
}

.icon-error {
  color: red;
}




/* --- NAVBAR --- */


#navbar {
  padding: 4px;
  margin: 0;
  list-style-type: none;
  background-color: var(--bg-navbar-sold);
  font-weight: 600;
  position: fixed;
  top: 0;
  left: 0;
  width: 99.5%;
  z-index: 3;
  border-bottom: 1px solid var(--bg-highlight);
}

@supports (backdrop-filter: blur()) {
  #navbar {
    background-color: var(--bg-navbar);
    backdrop-filter: blur(6px);
  }

  #burger-bar-background {
    backdrop-filter: blur(6px);
  }
}

li[class|="navbar-item"] > * {
  display: flex;
  cursor: pointer;
  justify-content: space-evenly;
  align-items: center;
  gap: 0.3em;
  padding: 0.4rem;
  margin: 0.25rem;
  height: 0.7rem;
  text-decoration: none;
  color: var(--text);
  border-radius: 0.8rem;
  transform-origin: center;
  transition: background-color 0.15s linear, transform 0.15s ease;
}

li[class|="navbar-item"]:hover {
  background-color: var(--bg-highlight);
}

li[class|="navbar-item"]:active {
  transform: scaleY(0.9);
  transform: scaleX(0.99);
}

li.navbar-item-left {
  float: left;
  transition: background-color 0.15s linear;
  border-radius: 0.8rem;
  margin: 0.3rem;
}

li.navbar-item-right {
  float: right;
  transition: background-color 0.15s linear;
  border-radius: 0.8rem;
  margin: 0.3rem;
}

.navbar-icon {
  width: 1em;
  height: 1em;
  stroke-width:
    /*0.15625rem*/
    2.5px;
}

li.navbar-active {
  background-color: var(--bg-elevated);
}

@media screen and (max-width: 400px) {
  [class|="navbar-text"] {
    display: none;
  }
}

@media screen and (max-width: 600px) {
  .navbar-text-3 {
    display: none;
  }
}





/*Periodensystem*/
#periodensystem {
  display: block;
  margin: 0 auto;
  max-width: min(1000px, 90vw);
  max-height: 100vh;
  width: auto;
  height: auto;
}

#pse-container {
  display: grid;
  grid-template-areas:
    "h  .  .  .  .  .  .  .  .  .  .  .  .  .  .  .  .  he"
    "li be .  .  .  .  .  .  .  .  .  .  b  c  n  o  f  ne"
    "na mg .  .  .  .  .  .  .  .  .  .  al si p  s  cl ar"
    "k  ca sc ti v  cr mn fe co ni cu zn ga ge as se br kr"
    "rb sr y  zr nb mo tc ru rh pd ag cd in sn sb te i  xe"
    "cs ba .  hf ta w  re os ir pt au hg tl pb bi po at rn"
    "fr ra .  rf db sg bh hs mt ds rg cn nh fl mc lv ts og"
    ".  .  la ce pr nd pm sm eu gd tb dy ho er tm yb lu .  "
    ".  .  ac th pa u  np pu am cm bk cf es fm md no lr .  ";
  width: 100%;
}

.pse-item {
  padding: 5px;
  /*background-color: lightblue;*/
  margin: 3px;
  border-radius: 2px;
  /*width: 5.55%;*/
}







/*Expandable*/
.expandable {
  margin: 0;
  background-color: var(--bg-elevated);
  border-radius: 2rem;
}

.expandable-header > h3 {
  margin: 0;
  width: 100%;
  text-align: left;
  font-family: Inter, sans-serif;
  color: var(--text);
}

.expandable-header {
  background: none;
  border-radius: 2rem;
  border: none;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 1.95rem;
  width: 100%;
  height: 5rem;
  transition: background 0.15s linear;
  cursor: pointer;
}


.expandable-header-icon {
  stroke-width: 0.2rem;
  height: 2em;
  width: 2em;
  color: var(--text-muted);
  rotate: 90deg;
  transition: rotate 0.3s;
}

.expandable-header::after {
  content: "";
  clear: both;
  display: table;
}

.expandable-content {
  height: 0;
  padding: 1.95rem;
  /*transform: scaleY(0.1);*/
  /*transform-origin: top;*/
  transition: height 0.3s ease;
  box-sizing: border-box;
  margin: 0;
  padding-top: 0;
}




/* --- DATEN --- */

#daten-werte-abschnitt {
  display: grid;
  grid-template-columns: 15rem auto;
  grid-template-rows: 17.5rem auto auto;
  grid-template-areas: 'grafik liste' 'infotext liste' 'zusatz liste';
  grid-gap: 1rem;
}
/* ... */

